...
	<string name="editor_menu_comp_select_vr">VR</string>
	<string name="editor_menu_comp_select_preview">Preview</string>
	<string name="editor_menu_undo">Undo</string>
	<string name="editor_menu_redo">Redo</string>
	<string name="editor_menu_tools">Tools</string>
	<string name="editor_menu_new_sketch">New Sketch</string>
	<string name="editor_menu_rename_sketch">Rename Sketch</string>
	<string name="editor_menu_duplicate_sketch">Duplicate Sketch</string>
	<string name="editor_menu_delete_sketch">Delete Sketch</string>
	<string name="editor_menu_open_sketch_properties">Sketch Properties</string>
	<string name="editor_menu_copy_to_sketchbook">Copy to Sketchbook</string>
	<string name="editor_menu_move_temp_to_sketchbook">Move to Sketchbook</string>
	<!-- Note that "copy sketch" currently only appears in the sketch properties menu. -->
	<string name="editor_menu_copy_sketch">Copy Sketch</string>
	
	<string name="editor_menu_tab_new">New Tab</string>
	<string name="editor_menu_tab_rename">Rename Tab</string>
	<string name="editor_menu_tab_duplicate">Duplicate Tab</string>
	<string name="editor_menu_tab_delete">Delete Tab</string>
	
	<!-- This is the title of the settings activity. -->
	<string name="title_activity_settings">Settings</string>
	
	<!-- This is the last menu item in all activities except for settings activities themselves. -->
	<string name="menu_open_settings">Settings</string>
	
	<string name="title_activity_sketch_properties">Sketch Properties</string>
	
...
	<string name="tab_delete_success">The tab has been deleted.</string>
	<string name="tab_rename_dialog_title">Rename Tab</string>
	<string name="tab_rename_dialog_message">Enter the new name for the tab:</string>
	<string name="tab_rename_success">The tab has been renamed.</string>
	
	<!-- The names of the top-level folders in the drawer -->
	<string name="drawer_folder_sketches">Sketches</string>
	<string name="drawer_folder_examples">Examples</string>
	<string name="drawer_folder_library_examples">Library Examples</string>
	<string name="drawer_folder_temporary">Temporary</string>
	<string name="drawer_folder_recent">Recent</string>
	
	<!-- These are the accessibility labels for the drawer open/close button. -->
	<string name="drawer_open_accessibility_text">Load Sketch</string>
	<string name="drawer_close_accessibility_text">Return to Sketch</string>
	
	<string name="drawer_list_icon_accessibility_text">Icon</string>
...
	<string name="rename_sketch_failure_title">Cannot Move Sketch</string>
	<string name="rename_sketch_failure_message">Another file of the same name exists in the destination folder.</string>
	<string name="rename_move_folder_failure_title">Cannot Move Folder</string>
	<string name="rename_move_folder_failure_message">Another file of the same name exists in the destination folder.</string>
	<string name="rename_sketch_title">Rename \&quot;<xliff:g example="testSketch" id="sketchName">%1$s</xliff:g>\&quot;</string>
	<string name="rename_sketch_message">Enter the new name for the sketch:</string>
	<string name="rename_sketch_button">Rename</string>
	<string name="rename_folder_title">Rename Folder \&quot;<xliff:g example="testFolder" id="folderName">%1$s</xliff:g>\&quot;</string>
	<string name="rename_folder_message">Enter the new name for the folder:</string>
	<string name="rename_folder_button">Rename</string>
	<string name="move_temp_to_sketchbook_title">Move to Sketchbook</string>
	<string name="move_temp_to_sketchbook_message">Move \&quot;<xliff:g example="sketch_20171221a" id="sketchName">%1$s</xliff:g>\&quot; from temporary storage to the Sketchbook?</string>
	<string name="move_temp_to_sketchbook_button">Move</string>
	
	<!-- Export eclipse project tool. -->
	<string name="export_gradle_project">Export Gradle Project</string>
	<string name="export_gradle_project_success">The Gradle project has been exported.</string>
	
	<!-- Export signed package tool. -->
...
	<string name="examples_update_dialog_title">Update Examples</string>
	<string name="examples_update_dialog_message">An update is available for the examples repository.\n\nPerforming this update will connect to GitHub servers.\n\nExamples updates can be configured from Settings > General > Examples Updates.</string>
	<string name="examples_update_dialog_dont_show_again">Don\'t show again</string>
	<string name="examples_update_dialog_disable_warning">Will not check for examples updates unless you re-enable checks from Settings.</string>
	<string name="examples_update_progress_message">Updating examples…</string>
	<!-- Examples update settings force re-download button. -->
	<string name="examples_update_settings_download_now">Re-download Examples Now</string>
	<string name="examples_update_settings_download_now_mobile_data_error_dialog_title">No Wi-Fi</string>
	<string name="examples_update_settings_download_now_mobile_data_error_dialog_message">Cannot download examples now because device is not connected to a Wi-Fi network. Downloading examples over mobile data is disabled.</string>
	
	<!-- Name of the git manager tool. -->
	<string name="tool_git_manager">Git Manager</string>
	
...
