<androidx.preference.PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >
	<androidx.preference.PreferenceCategory
		android:key="pref_general_settings"
		android:title="@string/pref_general" >
		
		<androidx.preference.SwitchPreferenceCompat
			android:defaultValue="true"
			android:key="pref_vibrate"
			android:title="@string/pref_vibrate"
			android:summary="@string/pref_vibrate_desc" />
...
			android:key="pref_sketchbook_location"
			android:title="@string/pref_sketchbook_location" />
	</androidx.preference.PreferenceCategory>
	
	<androidx.preference.PreferenceCategory
		android:key="pref_key_examples"
		android:title="@string/pref_examples_updates" >
		
		<androidx.preference.Preference
			android:title="@string/pref_examples_updates"
			android:fragment="com.calsignlabs.apde.support.StockPreferenceFragment" >
			
			<extra android:name="resource" android:value="pref_examples" />
...
