<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
	android:orientation="vertical">
	
	<androidx.appcompat.widget.Toolbar
		android:id="@+id/toolbar"
		app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:minHeight="?android:attr/actionBarSize"
		app:navigationContentDescription="@string/abc_action_bar_up_description"
		android:background="@color/colorPrimary"
		app:navigationIcon="?android:attr/homeAsUpIndicator"
		app:title="@string/title_activity_settings" />
	
	<FrameLayout
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:id="@+id/settings_fragment_container"
		android:paddingBottom="@dimen/activity_vertical_margin"
		android:paddingLeft="@dimen/activity_horizontal_margin"
		android:paddingRight="@dimen/activity_horizontal_margin"
		android:paddingTop="@dimen/activity_vertical_margin" />
</LinearLayout>
