...
	    
	    <View
  			android:layout_width="fill_parent"
  			android:layout_height="10dp"
   			android:background="#FFFFFFFF" />
	    
		<com.calsignlabs.apde.CodeEditText android:id="@+id/code"
		    android:inputType="text|textNoSuggestions|textMultiLine"
		    android:layout_width="fill_parent"
		    android:layout_height="0dp"
		    android:layout_weight="3"
		   	android:gravity="top"
		    android:scrollbars="vertical"
...
	    
	    <View
  			android:layout_width="fill_parent"
  			android:layout_height="2dp"
   			android:background="#AAAAAA" />
	    
		<ListView android:id="@+id/drawer_list"
	        android:layout_width="match_parent"
	        android:layout_height="match_parent"
	        android:choiceMode="singleChoice"
	        android:divider="#CCCCCC"
	        android:dividerHeight="0.5dp"
	        android:background="#EEEEEE"
...
